<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:paddingVertical="10dp"
    android:paddingHorizontal="20dp"
    android:background="@color/dark_gray"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_category"
        android:textColor="@color/white"
        android:textSize="@dimen/text_large"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/input_category_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:backgroundTint="@color/light_gray"
        android:hint="@string/enter_category_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/light_gray"
        android:textColor="@color/light_gray"
        android:textSize="@dimen/text_medium"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/cancel"
            android:textColor="@color/purple_200"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/add"
            android:textColor="@color/purple_200"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>

</LinearLayout>