<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:padding="1dp"
    android:background="@color/dark_gray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:paddingHorizontal="20dp"
        android:background="@color/dark_gray"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:textColor="@color/white"
                android:textSize="@dimen/text_medium"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_tasks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/task_number"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_small"/>

                <TextView
                    android:id="@+id/text_overdue_tasks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/overdue_task_number"
                    android:textColor="@color/red"
                    android:textSize="@dimen/text_small"/>

            </LinearLayout>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_edit"
            android:layout_width="@dimen/button_icon"
            android:layout_height="@dimen/button_icon"
            android:layout_marginHorizontal="20dp"
            android:background="@android:color/transparent"
            android:foreground="@drawable/ic_pencil"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_delete"
            android:layout_width="@dimen/button_icon"
            android:layout_height="@dimen/button_icon"
            android:background="@android:color/transparent"
            android:foreground="@drawable/ic_bin"/>

    </LinearLayout>

</LinearLayout>